теперь получение продуктов по автору на /products
